auth guard and title change in toolbar

--- a/src/app/pages/brands/brands.component.html
+++ b/src/app/pages/brands/brands.component.html
@@ -4,13 +4,29 @@
 <button mat-raised-button color="primary" style="margin-right:20px">ADD BRAND</button>
 </div>
 
-<mat-card class="brandcard">
-    <mat-card-content>
+<mat-card >
+    <mat-card-content >
         <mat-list>
-            <mat-list-item ><span matSuffix>LionHart</span><mat-icon>delete_forever</mat-icon></mat-list-item>
-            <mat-list-item><span matSuffix>Thunder Trac Grip</span><mat-icon>delete_forever</mat-icon></mat-list-item>
+             
+            <mat-list-item class="head_container">
+                <div style="display:flex;flex:1;">
+                    <span matSuffix>LionHart</span>
+                </div>
+                <div>
+                    <mat-icon>delete_forever</mat-icon>
+                </div>
+            </mat-list-item>
             
+            <mat-list-item class="head_container">
+                    <div style="display:flex;flex:1;">
+                        <span matSuffix>Thunderer Trac Grip</span>
+                    </div>
+                    <div>
+                        <mat-icon>delete_forever</mat-icon>
+                    </div>
+            </mat-list-item>
             
+
         </mat-list>
     
     </mat-card-content>
