--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
             
     </div>
     <div>
-        <button mat-raised-button color="primary">EXPORT AS CSV</button>
+        <button mat-raised-button color="primary">EXPORT AS CSV</button><div class="space"></div>
         <mat-slide-toggle color="primary" class="slodeTog">Compare</mat-slide-toggle>
     </div>   
 </div>
