--- a/src/app/pages/dial1/dial1.component.html
+++ b/src/app/pages/dial1/dial1.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p>Add Seller Product</p>
+    <p mat-dialog-title>Add Seller Product</p>
     <p>Please enter detail of seller product</p>
     <mat-form-field>
         <mat-select placeholder="Product Url*">
@@ -20,7 +20,6 @@
       </div>
       <div style="display: flex;flex-direction: row;justify-content:flex-end;">
       <button mat-raised-button color="primary" style="margin-right: 15px;">ADD</button>
-      <button mat-raised-button color="primary">CANCEL</button>
+      <button mat-raised-button >CANCEL</button>
       </div>
-    
-</div>
+    </div>
