--- a/src/app/pages/sellers/sellers.component.html
+++ b/src/app/pages/sellers/sellers.component.html
@@ -1,6 +1,6 @@
 <div class="btnflex">
         <button (click)='openDialog()' mat-raised-button color="primary" style="margin-right:20px" >ADD SELLER PRODUCT</button>
-        <button mat-raised-button color="primary" style="margin-right:20px">ADD SELLER</button>
+        <button (click)='addsellerDialog()' mat-raised-button color="primary" style="margin-right:20px">ADD SELLER</button>
 </div>
 
 <mat-card class="sellercard" >
