--- a/src/app/pages/brands/brands.component.css
+++ b/src/app/pages/brands/brands.component.css
@@ -6,3 +6,9 @@
 .brandcard{
     margin:auto 15px;    
 }
+head_container{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width:100%
+}
