--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,13 +9,13 @@
         
             
     </div>
-    <div>
+    <div style="display:flex;flex-direction:row;align-items: center;">
         <button mat-raised-button color="primary">EXPORT AS CSV</button><div class="space"></div>
         <mat-slide-toggle color="primary" class="slodeTog">Compare</mat-slide-toggle>
     </div>   
 </div>
  
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"å>
 
             <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
