--- a/src/app/static/header/header.component.css
+++ b/src/app/static/header/header.component.css
@@ -6,3 +6,22 @@
 mat-sidenav {
     width: 240px;
   }
+
+  /* md-sidenav { 
+      background-color: #f8921e; 
+      overflow: hidden; 
+    } 
+  md-nav-list a[md-list-item] { 
+      color: #fff;
+    } 
+  md-nav-list a[md-list-item] .md-list-item{ 
+      padding: 0 10px !important; 
+    } 
+  .md-sidenav-over.md-sidenav-closed md-nav-list a[md-list-item] .md-list-text {
+       display: none !important; 
+    } 
+    md-sidenav.md-sidenav-closed {
+         transform: translate3d(0, 0, 0) !important; 
+         visibility: visible !important; 
+         min-width: 40px !important; 
+    } */
