--- a/src/app/pages/brands/brand-list/brand-list.component.html
+++ b/src/app/pages/brands/brand-list/brand-list.component.html
@@ -8,12 +8,12 @@
             <mat-card-content >
                 <mat-nav-list>
                      
-                    <a mat-list-item *ngFor="let brand of Brand" [routerLink]="[brand.id]" class="head_container" >
+                    <a mat-list-item *ngFor="let brand of Brand" [routerLink]="[brand.id]"  >
                         <div style="display:flex;flex:1;">
                             <span matSuffix>{{brand.name}}</span>
                         </div>
                         <div>
-                            <mat-icon>delete_forever</mat-icon>
+                            <button mat-button><mat-icon>delete_forever</mat-icon></button>
                         </div>
                     </a>
                     
