--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
 <div class="head2" >
     <div>
         <mat-form-field >
-            <mat-select placeholder="Choose another brand">
-                <mat-option value="Thunderer Trac Grip">Thunderer Trac Grip</mat-option>
-                <mat-option value="Lion Hart">Lion Hart</mat-option>
+            <mat-select placeholder="Choose another brand" [formControl] = "tableControl" required>
+                <!-- <mat-option value="Thunderer Trac Grip">Thunderer Trac Grip</mat-option>
+                <mat-option value="Lion Hart">Lion Hart</mat-option> -->
+                <mat-option *ngFor="let brand of brands" [value]="brand">
+                    {{brand.name}}</mat-option>
             </mat-select>
         </mat-form-field>
         
@@ -11,39 +13,46 @@
     </div>
     <div style="display:flex;flex-direction:row;align-items: center;">
         <button mat-raised-button color="primary">EXPORT AS CSV</button><div class="space"></div>
-        <mat-slide-toggle color="primary" class="slodeTog">Compare</mat-slide-toggle>
+        <mat-slide-toggle color="primary" (toggleChange) = "modifyTable()">Compare</mat-slide-toggle> 
     </div>   
 </div>
  
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"å>
-
-            <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
+    
           
-            <!-- Position Column -->
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-          
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-              <th mat-header-cell *matHeaderCellDef> Weight </th>
-              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-            </ng-container>
-          
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-              <th mat-header-cell *matHeaderCellDef> Symbol </th>
-              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-            </ng-container>
-          
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <table mat-table [dataSource]= 'currentBrand' style='width:100%'>
+              <ng-container matColumnDef="Sku">
+                  <th mat-header-cell *matHeaderCellDef> MPN </th>
+                  <td mat-cell *matCellDef="let element"> {{element.Sku}} </td>
+          </ng-container>
+          <ng-container matColumnDef="ProductName">
+              <th mat-header-cell *matHeaderCellDef> Product Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.ProductName}} </td>
+           </ng-container> 
+           <ng-container matColumnDef="OurPrice">
+              <th mat-header-cell *matHeaderCellDef> Our Cost </th>
+              <td mat-cell *matCellDef="let element"> {{element.OurPrice}} </td>
+           </ng-container>
+           <ng-container matColumnDef="Quantity">
+              <th mat-header-cell *matHeaderCellDef> Quantity </th>
+              <td mat-cell *matCellDef="let element"> {{element.Quantity}} </td>
+          </ng-container>
+          <ng-container matColumnDef="SellerPrice">
+              <th mat-header-cell *matHeaderCellDef> (Price) </th>
+              <td mat-cell *matCellDef="let element"> 
+                <ng-container  *ngIf="element.SellerInfo">
+                Rs {{element.SellerInfo[0].SellerPrice}} 
+              </ng-container>
+              </td>
+          </ng-container>
+          <ng-container matColumnDef="SellerSold">
+              <th mat-header-cell *matHeaderCellDef> (#Sold) </th>
+              <td mat-cell *matCellDef="let element"> 
+                  <ng-container  *ngIf="element.SellerInfo">
+                  Rs {{element.SellerInfo[0].SellerSold}} 
+                </ng-container>
+                </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
+          
