--- a/src/app/pages/sellers/seller-list/seller-list.component.css
+++ b/src/app/pages/sellers/seller-list/seller-list.component.css
@@ -12,3 +12,14 @@ head_container{
     justify-content: space-between;
     width:100%
 }
+.circleIcon{
+    color:#6d6d6d;
+    background: #eeeeee;
+    border-radius: 50%;
+    width: 30px!important;
+    height: 30px!important;
+    font-size: 16px!important;
+    text-align: center;
+    line-height: 30px;
+    margin-right: 20px;;
+}
