--- a/src/app/pages/brands/brand-detail/brand-detail.component.html
+++ b/src/app/pages/brands/brand-detail/brand-detail.component.html
@@ -1,19 +1,20 @@
-<table mat-table [dataSource]=" dataSourceA" style="width:100%">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> MPN </th>
+<table mat-table [dataSource]=" dataSourceA" style="width:100%; margin:24px;">
+    <ng-container matColumnDef="id" style="width:30%">
+        <th mat-header-cell *matHeaderCellDef > MPN </th>
         <td mat-cell *matCellDef="let element">{{element.id}}</td>
         <td></td>
     </ng-container>
-    <ng-container matColumnDef="desc">
-            <th mat-header-cell *matHeaderCellDef> Product Name </th>
+    <ng-container matColumnDef="desc" style="width:70%">
+            <th mat-header-cell *matHeaderCellDef > Product Name </th>
             <td mat-cell *matCellDef="let element" matSuffix>{{element.desc}}<mat-icon>delete_forever</mat-icon></td>
             <td></td>
+            <!--  -->
     </ng-container>
     <!-- <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> Delete </th>
             <td mat-cell *matCellDef="let element"><mat-icon>delete_forever</mat-icon></td>
             <td></td>
-    </ng-container> -->
+    </ng-container>-->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   <mat-divider></mat-divider>
