--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="head2" >
+<div class="head2" style="margin-left: 20px; ">
     <div>
         <mat-form-field >
             <mat-select placeholder="Choose another brand" [formControl] = "tableControl" required>
@@ -12,47 +12,52 @@
             
     </div>
     <div style="display:flex;flex-direction:row;align-items: center;">
-        <button mat-raised-button color="primary">EXPORT AS CSV</button><div class="space"></div>
+        <button mat-raised-button color="primary" style="margin-right: 15px;">EXPORT AS CSV</button>
         <mat-slide-toggle color="primary" (toggleChange) = "modifyTable()">Compare</mat-slide-toggle> 
     </div>   
 </div>
  
     
           
-          <table mat-table [dataSource]= 'currentBrand' style='width:100%'>
-              <ng-container matColumnDef="Sku">
-                  <th mat-header-cell *matHeaderCellDef> MPN </th>
+          <table mat-table [dataSource]= 'currentBrand' style='width:100%; margin-left: 20px;'>
+          <ng-container matColumnDef="Sku">
+                  <th mat-header-cell *matHeaderCellDef > MPN </th>
                   <td mat-cell *matCellDef="let element"> {{element.Sku}} </td>
           </ng-container>
+
           <ng-container matColumnDef="ProductName">
-              <th mat-header-cell *matHeaderCellDef> Product Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.ProductName}} </td>
+              <th mat-header-cell *matHeaderCellDef > Product Name </th>
+              <td mat-cell *matCellDef="let element" > {{element.ProductName}} </td>
            </ng-container> 
-           <ng-container matColumnDef="OurPrice">
-              <th mat-header-cell *matHeaderCellDef> Our Cost </th>
-              <td mat-cell *matCellDef="let element"> {{element.OurPrice}} </td>
+           
+           <ng-container matColumnDef="OurPrice" stickyEnd>
+              <th mat-header-cell *matHeaderCellDef class="includePartition"> Our Cost </th>
+              <td mat-cell *matCellDef="let element" class="includePartition"> {{element.OurPrice}} </td>
            </ng-container>
            <ng-container matColumnDef="Quantity">
-              <th mat-header-cell *matHeaderCellDef> Quantity </th>
-              <td mat-cell *matCellDef="let element"> {{element.Quantity}} </td>
+              <th mat-header-cell *matHeaderCellDef class="includePartition"> Quantity </th>
+              <td mat-cell *matCellDef="let element" class="includePartition"> {{element.Quantity}} </td>
           </ng-container>
           <ng-container matColumnDef="SellerPrice">
-              <th mat-header-cell *matHeaderCellDef> (Price) </th>
-              <td mat-cell *matCellDef="let element"> 
-                <ng-container  *ngIf="element.SellerInfo">
+              <th mat-header-cell *matHeaderCellDef class="includePartition"> (Price) </th>
+              <td mat-cell *matCellDef="let element" class="includePartition"> 
+                <ng-container  *ngIf="element.SellerInfo else NA">
                 Rs {{element.SellerInfo[0].SellerPrice}} 
               </ng-container>
+              <ng-template #NA>N/A</ng-template>
               </td>
           </ng-container>
           <ng-container matColumnDef="SellerSold">
-              <th mat-header-cell *matHeaderCellDef> (#Sold) </th>
-              <td mat-cell *matCellDef="let element"> 
-                  <ng-container  *ngIf="element.SellerInfo">
+              <th mat-header-cell *matHeaderCellDef class="includePartition"> (#Sold) </th>
+              <td mat-cell *matCellDef="let element" class="includePartition"> 
+                  <ng-container  *ngIf="element.SellerInfo else NA">
                   Rs {{element.SellerInfo[0].SellerSold}} 
                 </ng-container>
+                <ng-template #NA>N/A</ng-template>
+
                 </td>
           </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background: #eeeeee;"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
           </table>
           
