--- a/src/app/pages/sellers/seller-detail/seller-detail.component.html
+++ b/src/app/pages/sellers/seller-detail/seller-detail.component.html
@@ -1,23 +1,23 @@
-<table mat-table [dataSource] = "dataSource1" style="width:90%"> 
-        <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> MPN </th>
-                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+<table mat-table [dataSource] = "dataSource1" style="width:120%;margin:24px;"> 
+        <ng-container matColumnDef="id"style = "width:10% ; font-size:18px;">
+                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> MPN </th>
+                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.id}} </td>
         </ng-container>
         <ng-container matColumnDef="brand">
-                <th mat-header-cell *matHeaderCellDef> Brand Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
+                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Brand Name </th>
+                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.brand}} </td>
         </ng-container>
         <ng-container matColumnDef="quantity">
-                <th mat-header-cell *matHeaderCellDef> Quantity </th>
-                <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Quantity </th>
+                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.quantity}} </td>
         </ng-container>
         <ng-container matColumnDef="price">
-                <th mat-header-cell *matHeaderCellDef> Price</th>
-                <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Price</th>
+                <td mat-cell *matCellDef="let element" style = "width:10%;font-size: 15px;"> {{element.price}} </td>
         </ng-container>
         <ng-container matColumnDef="url">
-                <th mat-header-cell *matHeaderCellDef> Url </th>
-                <td mat-cell *matCellDef="let element"> {{element.url}} </td>
+                <th mat-header-cell *matHeaderCellDef style="font-size:18px;"> Url </th>
+                <td mat-cell *matCellDef="let element" style = "width:55%;font-size: 15px;"> {{element.url}} </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
