--- a/src/app/pages/sellers/seller-list/seller-list.component.html
+++ b/src/app/pages/sellers/seller-list/seller-list.component.html
@@ -9,12 +9,17 @@
             <a mat-list-item *ngFor="let seller of Seller" [routerLink]="[seller.id]">
                 
                     <div style="display:flex;flex:1;">
+                        <span class="circleIcon">{{seller.name[0]}}</span>
                         <span matSuffix>{{seller.name}}</span>
                     </div>
                     <div><span><button mat-button><mat-icon>playlist_add</mat-icon></button></span>
                         <span><button mat-button><mat-icon>list</mat-icon></button></span>
                         <span><button mat-button><mat-icon>delete_forever</mat-icon></button></span>
                         <span><button mat-button><mat-icon>next_week</mat-icon></button></span>
+                        <!-- <span><a *ngIf = "seller.name === 'IFixItZone' ; else Case2" href="https://www.ebay.com/str/iFixitzone"><button mat-button><mat-icon>nextweek</mat-icon></button></a></span>
+                        <ng-template #Case2> 
+                            <span><a href="http://www.ebaystores.com/Buy-Wheels-Today"><button mat-button>next_week</button></a></span>
+                        </ng-template> -->
                     </div>
                                 
             </a>
