--- a/src/app/pages/alerts/alerts.component.html
+++ b/src/app/pages/alerts/alerts.component.html
@@ -53,7 +53,7 @@
                         <mat-list-item role="listitem">
                             <div class="head_container">
                                 <div>
-                                    <span><mat-icon>import_export</mat-icon></span>
+                                    <span><mat-icon style = "border-radius: 50%; background:#eeeeee;">import_export</mat-icon></span>
                                     <span>&nbsp; MPN No. &nbsp;</span>
                                     <span>(Brand Name) &nbsp;</span>
                                     <span>Seller Name &nbsp;</span>
@@ -100,7 +100,7 @@
                         <mat-list-item role="listitem">
                             <div class="head_container">
                                 <div>
-                                    <span><mat-icon>import_export</mat-icon></span>
+                                    <span><mat-icon style = "border-radius: 50%; background:#eeeeee;">import_export</mat-icon></span>
                                     <span>&nbsp; MPN No. &nbsp;</span>
                                     <span>(Brand Name) &nbsp;</span>
                                     <span>Seller Name &nbsp;</span>
