--- a/src/app/pages/add-brand-dia/add-brand-dia.component.html
+++ b/src/app/pages/add-brand-dia/add-brand-dia.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]= "form" (ngSubmit) = "submit(form)">
+        <!-- (ngSubmit) = "submit(form)" -->
 <h2 mat-dialog-title> Add Brand</h2>
 <p>Please enter the name of the brand</p>
 <mat-form-field>
@@ -7,7 +8,7 @@
 </mat-form-field>
 <mat-dialog-actions>
     <div style="display:flex;flex-direction:row;justify-content:flex-start">
-        <button  mat-button-type="submit" mat-raised-button color="primary" style="margin-right: 15px;">Add</button>
+        <button  mat-button-type="submit"  mat-raised-button color="primary" style="margin-right: 15px;">Add</button>
         <button mat-raised-button mat-dialog-close>Cancel</button>
     </div>
 </mat-dialog-actions>
