--- a/src/app/pages/brands/brand-list/brand-list.component.html
+++ b/src/app/pages/brands/brand-list/brand-list.component.html
@@ -8,14 +8,14 @@
             <mat-card-content >
                 <mat-nav-list>
                      
-                    <a mat-list-item *ngFor="let brand of Brand" [routerLink]="[brand.id]"  >
+                    <a mat-list-item *ngFor="let brand of brands" [routerLink]="[brand.id]"  >
                         <div style="display:flex;flex:1;">
                             <span class="circle-icon">{{brand.name[0]}}</span>
                            
                             <span matSuffix class="textStyle">{{brand.name}}</span>
                         </div>
                         <div>
-                            <button mat-button><mat-icon>delete_forever</mat-icon></button>
+                            <button (click) = "delete(brand)" mat-button><mat-icon>delete_forever</mat-icon></button>
                         </div>
                     </a>
                     
